--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
 You sent
 <script>
-  window.location.href = "https://example.github.io";
+  window.location.href = "https://mohamedgasteiz.github.io";
 </script>
   
 
