--- a/js.html
+++ b/js.html
@@ -5,7 +5,7 @@
         body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-color: #f8f9fa;
+    background-color: yellow;
     margin: 0;
     padding: 0;
 }
@@ -52,13 +52,13 @@ input {
 }
 
 input:focus {
-    border-color: #0056b3;
+    border-color: green;
     box-shadow: 0 0 8px rgba(0, 91, 187, 0.5);
 };
 }
 
 button {
-    background: #28a745;
+    background: #218838;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -84,6 +84,7 @@ button:hover {
     </style>
 </head>
 <body>
+    <center>
 <h1>مرحبا بكم في صفحتي لحساب المعدل</h1>
     <h2>حساب المعدل الفصلي</h2>
     
@@ -151,12 +152,11 @@ button:hover {
             document.getElementById("finalAverage").innerText = "المعدل الفصلي: " + finalAverage.toFixed(2);
         }
     </script>
-    <center>
-
+   
+<br><br>
 Mohamed Nassereddine Hamouda 
-<br>
+<br><br>
 All rights saved - 2025
 </center>
 </body>
 </html>
-
